other-cel/require-non-root-groups/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
  securityContext:
    runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
  - name: container02
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
  securityContext:
    runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod12
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod13
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod14
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      runAsGroup: 0
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod15
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: supgrp-badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    supplementalGroups: [0]
---
apiVersion: v1
kind: Pod
metadata:
  name: supgrp-badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    supplementalGroups: [14,0]
---
apiVersion: v1
kind: Pod
metadata:
  name: fsgrp-badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    fsGroup: 0
---
