other-cel/require-non-root-groups/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root-groups
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
